[package]
name = "axum-password-worker"
version = "0.1.0"
edition = "2021"
description = "A wrapper for bcrypt that can be used as axum State, and uses a rayon thread pool so it won't block the tokio runtime."
license = "MIT"
authors = ["Jonathan Underwood <jonathan.underwood4649@gmail.com>"]
repository = "https://github.com/junderw/axum-password-worker/"
documentation = "https://docs.rs/axum-password-worker/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14"
tokio = { version = "1", features = ["full"] }
rayon = "1"
crossbeam-channel = "0.5"
thiserror = "1"