[package]
name = "axum-password-worker"
version = "0.3.4"
edition = "2021"
description = "A wrapper for password hashing that can be used as shared state, and uses a rayon thread pool so it won't block the async runtime."
license = "MIT"
authors = ["Jonathan Underwood <jonathan.underwood4649@gmail.com>"]
repository = "https://github.com/junderw/axum-password-worker/"
documentation = "https://docs.rs/axum-password-worker/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "usage"
required-features = ["bcrypt", "rust-argon2"]

# To check the docsrs output, run this command
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --open
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["bcrypt"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
rayon = "1"
crossbeam-channel = "0.5"
thiserror = "1"

# Optional hash algorithms
bcrypt = { version = "0.15", optional = true }
rust-argon2 = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
